--- a/spring-boot-starter/pom.xml
+++ b/spring-boot-starter/pom.xml
@@ -42,12 +42,21 @@
         <module>mapper-spring-boot-autoconfigure</module>
         <module>mapper-spring-boot-starter</module>
         <module>mapper-spring-boot-samples</module>
+        <!-- for spring boot 3 -->
+        <module>mapper-jakarta-spring-boot-autoconfigure</module>
+        <module>mapper-jakarta-spring-boot-starter</module>
+        <module>mapper-jakarta-spring-boot-samples</module>
     </modules>
 
     <properties>
         <mybatis.version>3.5.9</mybatis.version>
         <mybatis-spring.version>2.0.7</mybatis-spring.version>
         <spring-boot.version>2.6.4</spring-boot.version>
+        
+        
+        <jakarta-mybatis.version>3.5.15</jakarta-mybatis.version>
+        <jakarta-mybatis-spring.version>3.0.3</jakarta-mybatis-spring.version>
+        <jakarta-spring-boot.version>3.2.1</jakarta-spring-boot.version>
     </properties>
 
     <repositories>
