--- a/spring-jakarta-boot-starter/mapper-jakarta-spring-boot-autoconfigure/pom.xml
+++ b/spring-jakarta-boot-starter/mapper-jakarta-spring-boot-autoconfigure/pom.xml
@@ -28,57 +28,60 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>tk.mybatis</groupId>
-        <artifactId>mapper-spring-boot</artifactId>
+        <artifactId>mapper-jakarta-spring-boot</artifactId>
         <version>${revision}</version>
     </parent>
-    <artifactId>mapper-jakarta-spring-boot-starter</artifactId>
-    <name>mapper-jakarta-spring-boot-starter</name>
-    <description>Spring Boot 3 Support for Mapper</description>
+    <artifactId>mapper-jakarta-spring-boot-autoconfigure</artifactId>
+    <name>mapper-spring-boot-autoconfigure</name>
+
     <dependencies>
+        <!-- Compile dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
             <version>${jakarta-spring-boot.version}</version>
         </dependency>
+
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
-            <version>${jakarta-spring-boot.version}</version>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-core</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>${jakarta-mybatis.version}</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
             <version>${jakarta-mybatis-spring.version}</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>tk.mybatis</groupId>
-            <artifactId>mapper-core</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <!-- @ConfigurationProperties annotation processing (metadata for IDEs) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>${jakarta-spring-boot.version}</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>tk.mybatis</groupId>
-            <artifactId>mapper-base</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>tk.mybatis</groupId>
-            <artifactId>mapper-weekend</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>tk.mybatis</groupId>
-            <artifactId>mapper-spring</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>tk.mybatis</groupId>
-            <artifactId>mapper-extra</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>tk.mybatis</groupId>
-            <artifactId>mapper-jakarta-spring-boot-autoconfigure</artifactId>
-            <version>${revision}</version>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 </project>
